2017-09-10  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] Improve Ctrl+W and Ctrl+Q shortcuts in MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=176619

        Reviewed by Carlos Garcia Campos.

        There are two different problems here. First, Ctrl+W is closing the entire window. That made
        sense when I implemented the shortcut a couple years ago, but now MiniBrowser supports tabs
        and it should really close only one single tab. Fix that.

        Next, the keyboard shortcuts are not using webkit_web_view_try_close() and so are bypassing
        onbeforeunload handlers, which are respected when closing with the mouse. Fix that too.

        * MiniBrowser/gtk/BrowserWindow.c:
        (browserWindowTryCloseCurrentWebView):
        (browserWindowTryClose):
        (browser_window_init):

2017-09-09  Michael Catanzaro  <mcatanzaro@igalia.com>

        [GTK] Unreviewed, fix typo forwad -> forward

        * MiniBrowser/gtk/BrowserWindow.c:
        (browserWindowUpdateNavigationActions):
        (backForwardlistChanged):
        (browserWindowSwitchTab):
        (backForwadlistChanged): Deleted.

2017-09-09  Michael Catanzaro  <mcatanzaro@igalia.com>

        MiniBrowser closes tab instead of window on close signal
        https://bugs.webkit.org/show_bug.cgi?id=176587

        Reviewed by Carlos Garcia Campos.

        This has been broken since we added support for multiple tabs. We need to run try_close for
        every open tab, not just the current one. If there are no onbeforeonload handlers then all
        tabs will close; if there are some, then they'll be respected, but the remaining tabs will
        be closed.

        Note that we cannot simply iterate through the tabs of the GtkNotebook, as we'd be deleting
        tabs as we go, so save all the tabs into a separate list and then try to close each in turn.

        * MiniBrowser/gtk/BrowserWindow.c:
        (browserWindowTryClose):